--- a/package.json
+++ b/package.json
@@ -6,15 +6,38 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "crypto": "^1.0.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "history": "^4.10.1",
+    "js-cookie": "^2.2.1",
+    "lodash": "^4.17.15",
+    "morgan": "^1.10.0",
+    "node-sass": "^4.14.1",
+    "npm-run-all": "^4.1.5",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build:main": "react-scripts build",
+    "test:main": "react-scripts test",
+    "server": "nodemon server/index.js",
+    "start": "NODE_ENV=production node server/index.js",
+    "run-deploy": "npm run build && NODE_ENV=production pm2 server/index.js --name frontend",
+    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts start",
+    "client": "npm-run-all -p watch-css start-js",
+    "dev": "concurrently \"npm run server\" \"npm run client\" ",
+    "build": "GENERATE_SOURCEMAP=false npm run build-css && react-scripts build",
+    "deploy": "npm run build-css && react-scripts build && firebase deploy",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "YARN_PRODUCTION=false yarn install && npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
